# ======================================================================
# This is the StdHep configuration input file
# Process this file with autoconf to produce a configure script.
# ======================================================================


# ----------------------------------------------------------------------
# Identify the package and initialize the autotools:
# ----------------------------------------------------------------------

AC_PREREQ(2.57)
AC_INIT(CLHEP StdHep, toy1.9.0.0, CLHEP@cern.ch, StdHep)
AC_CONFIG_AUX_DIR(autotools)
AC_CONFIG_SRCDIR([src/collision.cc])
AM_INIT_AUTOMAKE(1.6 foreign)
AC_PROG_LIBTOOL


# ----------------------------------------------------------------------
# Identify the files that 'configure' is to produce:
# ----------------------------------------------------------------------

# Header containing #defines:
AM_CONFIG_HEADER([StdHep/defs.h])

# Makefiles:
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([StdHep/Makefile])
AC_CONFIG_FILES([StdHep/include/Makefile])
AC_CONFIG_FILES([src/Makefile])

# ----------------------------------------------------------------------
# Capture post-install information:
# ----------------------------------------------------------------------

StdHep_CPPFLAGS="-I$includedir"
StdHep_LDFLAGS="-L$libdir"
StdHep_LIBS="-l$PACKAGE_TARNAME -lm"

AC_SUBST(StdHep_CPPFLAGS)
AC_SUBST(StdHep_LIBS)
AC_SUBST(StdHep_LDFLAGS)


# ----------------------------------------------------------------------
# Supply boilerplate for StdHep/defs.h source header:
# ----------------------------------------------------------------------

AH_TOP([#ifndef STDHEP_DEFS_H
#define STDHEP_DEFS_H])

AH_BOTTOM([/*  use correct std::ios_base or std::ios (old) */
#ifdef HAVE_IOS_BASE
#define HepIOS std::ios_base 
#else 
#define HepIOS std::ios 
#endif

#endif  // STDHEP_DEFS_H])


# ----------------------------------------------------------------------
# Account for any user configuration options:
# ----------------------------------------------------------------------

# Determine whether optional thread support is requested:
AC_ARG_ENABLE(
	threads,
	[  --enable-threads    Turn on thread support],
	[case "${enableval}" in
	  yes) threads=true ;;
	  no)  threads=false ;;
	  *) AC_MSG_ERROR(bad value ${enableval} for --enable-threads) ;;
	esac],
	[threads=false]
	)
AM_CONDITIONAL(USE_THREADS, test x$threads = xtrue)


# ----------------------------------------------------------------------
# Check for needed programs:
# ----------------------------------------------------------------------

# Locate a C++ compiler:
AC_PROG_CXX(aCC CC cxx cc++ cl FCC KCC RCC xlC_r xlC g++ c++ gpp)

# Use it hereinafter:
AC_LANG(C++)

# Ensure we've found a preprocessor:
AC_REQUIRE_CPP


# ----------------------------------------------------------------------
# Set system-dependent options:
# ----------------------------------------------------------------------


# ----------------------------------------------------------------------
# Check for needed libraries:
# ----------------------------------------------------------------------


# ----------------------------------------------------------------------
# Check for needed header files:
# ----------------------------------------------------------------------
AC_HEADER_STDC
AC_HEADER_STDBOOL
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([sstream])

# ----------------------------------------------------------------------
# Check for needed typedefs, structures, and compiler characteristics:
# ----------------------------------------------------------------------
AC_C_CONST
AC_C_INLINE
AC_CHECK_TYPES([ptrdiff_t])

AC_CHECK_DECL(M_PI,
	[],
	AC_DEFINE(M_PI, 3.14159265358979323846, [Value of pi]),
	[#include <cmath>])

AC_CHECK_DECL(M_PI_2,
	[],
	AC_DEFINE(M_PI_2, 1.57079632679489661923, [Value of pi/2]),
	[#include <cmath>])

AC_CHECK_DECL(M_2PI,
	[],
	AC_DEFINE(M_2PI, 6.28318530717958647692, [Value of 2*pi]),
	[#include <cmath>])

AC_MSG_CHECKING([for ios_base])
iosbase=no
AC_COMPILE_IFELSE(
   [AC_LANG_PROGRAM([[#include <fstream>
   std::ios_base::openmode mode;]])],
   [AC_DEFINE([HAVE_IOS_BASE], [], [have std::ios_base]) iosbase=yes] )
AC_MSG_RESULT([$iosbase])

# ----------------------------------------------------------------------
# Check for needed library functions:
# ----------------------------------------------------------------------

AC_CHECK_FUNCS([pow sqrt])

# ----------------------------------------------------------------------
# Finish up:
# ----------------------------------------------------------------------

AC_OUTPUT


# ======================================================================
